--- a/style.css
+++ b/style.css
@@ -14,4 +14,13 @@
     
     font-size: xx-large;
 }
+.n1{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bolder;
+}
+.sp{
+    font-weight: lighter;
+}
+.para{
+    font-weight: bold;
 }
